# test3-test

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.a6e0c27  Video.qml  inspector.cpp  inspector.h  inspector.ui  interface.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qml.qrc  qtquickcontrols2.conf  test.qml  test2.qml  test_aop.cpp  test_breakpad.cpp  test_gtest.cpp  test_modbus.cpp  test_qml.cpp  test_qsg.cpp  test_rea.cpp  test_storage.cpp  test_tcp.cpp  videooutput.cpp  videooutput.h
aws/: awsStorage.cpp  awsStorage.h  aws_s3.cpp
aws/minIO/: gen.bat  storage_install.bat  storage_start.bat
html/: bundle.js  test.html  test.js
mnist-core/: index.html
plugin/aws/: CMakeLists.txt  CMakeLists2.txt  awsStorage.cpp  awsStorage.h  aws_s3.h
plugin/aws/minIO/minIO/: minIO_netsh.bat  storage_stop.bat  storage_uninstall.bat
plugin/breakpad/: CMakeLists.txt  test_breakpad.cpp
plugin/gtest/: CMakeLists.txt  test_gtest.cpp
plugin/opencv/: CMakeLists.txt
plugin/py/: main.py  reaRemote.py  server.py  storage.py  test.py
plugin/py/sip/: pyproject.toml  rea.sip  readme.md
plugin/web/: CMakeLists2.txt
plugin/web/html/: test.html  test.js
plugin/web/mnist-core/: package-lock.json
plugin/web/test_vue/: package-lock.json
plugin/web/test_vue/src/components/: HelloWorld.vue
plugin/web/webpack/: package-lock.json  package.json  webpack.config.js
plugin/web/webpack/app/: Greeter.js  fsTree.js  interface.js  jsTree.js  main.js  navMenu.js  rea.js  style.css  winBox.js
plugin/web/webpack/public/: bundle.js  index.html
test_vue/: package.json
test_vue/src/components/: HelloWorld.vue
webpack/: package-lock.json  package.json  webpack.config.js
webpack/app/: Greeter.js  main.js
webpack/public/: bundle.js
