# Specify sip v6 as the build system for the package.
[build-system]
requires = ["sip >=6, <7"]
build-backend = "sipbuild.api"

# Specify the PEP 566 metadata for the project.
[tool.sip.metadata]
name = "rea"

[tool.sip.bindings.rea]
headers = ["util.h"]
include-dirs = ["D:/mywork3/frm/include"]
libraries = ["REA"]
library-dirs = ["D:/mywork3/frm/install/lib/Release"]